--- a/cartridges/openshift-origin-cartridge-mock/metadata/manifest.yml
+++ b/cartridges/openshift-origin-cartridge-mock/metadata/manifest.yml
@@ -75,3 +75,25 @@ Version-Overrides:
     Provides:
     - mock-0.2
     - mock
+  '0.3':
+    Display-Name: Mock Cartridge 3.0
+    Install-Build-Required: true
+    Provides:
+    - mock-0.3
+    - mock-0.2
+    - mock
+    Endpoints:
+    - Private-IP-Name: EXAMPLE_IP1
+      Private-Port-Name: EXAMPLE_PORT1
+      Private-Port: 8443
+      Public-Port-Name: EXAMPLE_PUBLIC_PORT1
+      Mappings:
+      - Frontend: ''
+        Backend: ''
+        Options:
+          ssl_to_gear: true
+          websocket: true
+      - Frontend: /health
+        Backend: ''
+        Options:
+          health: true
